--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-  <div class="insieme border">
+  <main class="insieme border">
     <img src="./images/image-qr-code.png" alt="QR Code" class="border">
     <h1>Improve your front-end skills by building projects</h1>
     <p>Scan the QR code to visit Frontend Mentor and take your code skills to the next level</p>
-  </div>
+  </main>
 </body>
 
 </html>
